# gxsmread

./: README.md  pyproject.toml
example/: channels_config.toml
gxsmread/: channel_config.py  filename.py  preprocess.py  read.py  utils.py
tests/: test_channel_config.py  test_filename.py  test_preprocess.py  test_read.py  test_spec.py
tests/data/: killburn_r17_LiNi_initial_scan041-Xp-ADC1.nc  killburn_r17_LiNi_initial_scan042-M-Xp-Topo.nc  test007-VP003-VP.vpdata
tests/data/multichannel_file/: r19_AuNP_LN084-M-Xp-Topo.nc  r19_AuNP_LN084-Xm-ADC0mITunnel.nc  r19_AuNP_LN084-Xm-ADC1.nc  r19_AuNP_LN084-Xm-ADC2.nc  r19_AuNP_LN084-Xm-ADC4.nc  r19_AuNP_LN084-Xm-Topo.nc  r19_AuNP_LN084-Xp-ADC0mITunnel.nc  r19_AuNP_LN084-Xp-ADC1.nc  r19_AuNP_LN084-Xp-ADC2.nc  r19_AuNP_LN084-Xp-ADC4.nc
